Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
None
-
ghx-label-3
Description
The problem is that even though both the query profile and the /queries debug web page set 'Query State' from the value ClientRequestState::query_state_, the debug web page always takes the current value, whereas the value in the profile is only updated at particular points during execution.
This can lead to a situation where the profile's 'Query State' is stale and doesn't match the one in the debug web page, which is confusing.
Attachments
Issue Links
- is duplicated by
-
IMPALA-6211 Query state shows FINISHED in webUI/25000/queries page while it shows CREATED in profile
- Resolved